Add basic HTML content and images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,50 @@
     <title>Sign-up Form</title>
 </head>
 <body>
-   
+    <div class="left_side">
+        <div class="logo"><img src="./images/ghibli-logo.png" alt="Studio Ghibli logo"></div>
+        <div class="text">Join the adventure!</div>
+        <div class="footer">Copyright © syl1m 2022<</div>
+    </div>
+    <div class="right_side">
+        <div class="top">
+            <div>Sign up now!  This is not a real online service.</div>
+            <div>What are you waiting for?</div>
+        </div>
+        <div class="form">
+            <form action="" method="post" id="signup_form">
+                <div class="form_field">  
+                    <label for="first_name">FIRST NAME</label>
+                    <input type="text" name="first_name" id="first_name" required>
+                </div>
+                <div class="form_field">  
+                    <label for="last_name">LAST NAME</label>
+                    <input type="text" name="last_name" id="last>name" required>
+                </div>
+                <div class="form_field">  
+                    <label for="email">EMAIL</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+                <div class="form_field">  
+                    <label for="phone_number">PHONE NUMBER</label>
+                    <input type="tel" name="phone_number" id="phone_number" required>
+                </div>
+                <div class="form_field">  
+                    <label for="password">PASSWORD</label>
+                    <input type="password" name="password" id="password" required>
+                </div>
+                <div class="form_field">  
+                    <label for="confirm_password">CONFIRM PASSWORD</label>
+                    <input type="password" name="confirm_password" id="confirm_password" required>
+                </div>
+            </form>
+        </div>
+        <div class="bottom">
+            <div class="submit">
+                <button type="submit">Create Account</button>
+            </div>
+            <div class="login">Already have an account? <span>Log in</span></div>
+        </div>
+    </div>
 </body>
 </html>
