--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="left_side">
-        <div class="logo"><img src="./images/ghibli-logo.png" alt="Studio Ghibli logo"></div>
+        <div class="logo"><img src="./images/ghibli_logo.png" alt="Studio Ghibli logo"></div>
         <div class="text">Join the adventure!</div>
         <div class="footer">Copyright © syl1m 2022<</div>
     </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="bottom">
             <div class="submit">
-                <button type="submit">Create Account</button>
+                <button type="submit" form="signup_form">Create Account</button>
             </div>
             <div class="login">Already have an account? <span>Log in</span></div>
         </div>
