Style left side of webpage

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <script src="javascript.js" defer></script>
     <title>Sign-up Form</title>
 </head>
 <body>
     <div class="left_side">
-        <div class="logo"><img src="./images/ghibli_logo.png" alt="Studio Ghibli logo"></div>
-        <div class="text">Join the adventure!</div>
-        <div class="footer">Copyright © syl1m 2022<</div>
+        <div class="logo_section">
+            <img src="./images/ghibli_logo.png" alt="Studio Ghibli logo">
+            <div class="text">Ghibli Fan Page</div>
+        </div>
+        <div class="blank_container"> </div>
+        <div class="footer">Copyright © syl1m 2022</div>
     </div>
     <div class="right_side">
         <div class="top">
