--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     </div>
     <div class="right_side">
         <div class="top">
-            <div>Sign up now!  This is not a real online service.</div>
-            <div>What are you waiting for?</div>
+            <div class="disclaimer">Disclaimer: This is not a real online service!</div>
+            <div>Join our community and meet new friends that share your enthusiasm for all things Studio Ghibli.  Be the first to know about limited edition products, the latest news, and local events!</div>
+            <div>Sign up <em>today</em> to get started.</div>
         </div>
         <div class="form">
+            <div class="form_text">Let's do this!</div>
             <form action="" method="post" id="signup_form">
                 <div class="form_field">  
                     <label for="first_name">FIRST NAME</label>
@@ -57,7 +59,10 @@
             <div class="submit">
                 <button type="submit" form="signup_form">Create Account</button>
             </div>
-            <div class="login">Already have an account? <span>Log in</span></div>
+            <div class="login">
+                Already have an account? 
+                <a href="">Log in</a>
+            </div>
         </div>
     </div>
 </body>
