Update form layout in CSS

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="form_field">  
                     <label for="last_name">LAST NAME</label>
-                    <input type="text" name="last_name" id="last>name" required>
+                    <input type="text" name="last_name" id="last_name" required>
                 </div>
                 <div class="form_field">  
                     <label for="email">EMAIL</label>
@@ -56,10 +56,10 @@
             </form>
         </div>
         <div class="bottom">
-            <div class="submit">
+            <div>
                 <button type="submit" form="signup_form">Create Account</button>
             </div>
-            <div class="login">
+            <div>
                 Already have an account? 
                 <a href="">Log in</a>
             </div>
