Add password confirmation texts and styling

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <div class="form_field">  
                     <label for="confirm_password">CONFIRM PASSWORD</label>
                     <input type="password" name="confirm_password" id="confirm_password" required>
+                    <span></span>
                 </div>
             </form>
         </div>
