--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 </div>
                 <div class="form_field">  
                     <label for="phone_number">PHONE NUMBER</label>
-                    <input type="tel" name="phone_number" id="phone_number" required>
+                    <input type="tel" name="phone_number" id="phone_number" placeholder="(xxx) xxx-xxxx" pattern="[(][\d]{3}[)] [\d]{3}-[\d]{4}" title="(123) 123-1234 format" required>
                 </div>
                 <div class="form_field">  
                     <label for="password">PASSWORD</label>
-                    <input type="password" name="password" id="password" required>
+                    <input type="password" name="password" id="password" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{8,}" title="Password must be least 8 characters long and contain at least 1 number, special character, lowercase letter, and uppercase letter." required>
                 </div>
                 <div class="form_field">  
                     <label for="confirm_password">CONFIRM PASSWORD</label>
