--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="form_field">  
                     <label for="password">PASSWORD</label>
                     <input type="password" name="password" id="password" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{8,}" title="Password must be least 8 characters long and contain at least 1 number, special character, lowercase letter, and uppercase letter." required>
+                    <span></span>
                 </div>
                 <div class="form_field">  
                     <label for="confirm_password">CONFIRM PASSWORD</label>
